# wave_clean

./: .env.browser  .env.tauri  .gitignore  README.md  index.html  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/desktop/: before_exit.rs  mod.rs
src/assets/: base.css  theme.css
src/clipBoard/: useClipBoard.ts
src/file/: JsonFileOperations.ts  fileSave.ts  htmlExport.ts
src/history/: BaseHistory.ts  commandHistory.ts  stateHistory.ts
src/i18n/: en.ts  index.ts  zhCn.ts
src/icons/: IconAdd.vue  IconArrowNone.vue  IconArrowOneWayLeft.vue  IconArrowOneWayRight.vue  IconArrowTwoWay.vue  IconClose.vue  IconCopy.vue  IconCut.vue  IconDark.vue  IconDelete.vue  IconDownload.vue  IconDrag.vue  IconFit.vue  IconFocus.vue  IconInvisible.vue  IconLayer.vue  IconLight.vue  IconMenu.vue  IconMultiSelect.vue  IconPaste.vue  IconRedo.vue  IconSave.vue  IconSelectRect.vue  IconSelection.vue  IconUndo.vue  IconVisible.vue
src/input/: ColorInput.vue  FitSizeBlockInput.vue  FitSizeInput.vue  FitSizeLineInput.vue  textSize.ts
src/json/: getRaw.ts
src/list/: DragList.vue  DragModelList.vue
src/message/: Message.vue  sendMessage.ts
src/mindMap/: ContentEdge.vue  ContentInput.vue  ContentNode.vue  MindMap.vue  MindMapData.ts  clickUtils.ts  useEdgeDrag.ts  useMindMap.ts
src/store/: deviceStore.ts  focusTargetStore.ts  i18nStore.ts  mindMapStore.ts  themeStore.ts
(+192 files in other folders)
